# SAPI-POC

./: LICENSE  README.md
engine/: CMakeLists.txt  dllmain.cpp  engine.cpp  engine.h  pycpp.cpp  pycpp.h  pysapittsengine.idl  pysapittsengine.rgs  regvoice.cpp  resource.h  resource.rc.in  slog.h  speak.cpp
voices/: __init__.py  azure_neural.py  dummy.py
voices/azure/: __init__.py  jessa_neural.py
